[project]
name = "vineflow-backend"
version = "0.1.0"
description = "Vineflow invoicing system - backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "pyjwt>=2.10",
    "pwdlib[argon2]>=0.2.1",
    "python-multipart>=0.0.20",
    "typer>=0.15",
]

[project.scripts]
vineflow = "app.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "httpx>=0.28",
    "pytest>=8.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
